tests/sksl/errors/ReservedNameHvec4.glsl
### Compilation failed:

error: 1: name 'hvec4' is reserved
int hvec4;
    ^^^^^
1 error
